# AutonoFly_VTOL

./: .gitignore  .gitmodules  Dockerfile  README.md  autonofly_all.tmux.yml  entrypoint.sh  install_px4_gz_ros2_for_ubuntu.sh  start_autonomy.sh
ros2_ws/install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.sh
ros2_ws/install/autonofly_nav/lib/autonofly_nav/: rrt_node  talker
ros2_ws/install/autonofly_nav/share/autonofly_nav/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/autonofly_slam/lib/autonofly_slam/: fastslam_node
ros2_ws/install/autonofly_slam/share/autonofly_slam/: package.dsv  package.ps1  package.sh  package.xml
ros2_ws/install/costmap_queue/share/costmap_queue/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ros2_ws/install/dwb_core/share/dwb_core/: local_planner_plugin.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ros2_ws/log/: latest_build
ros2_ws/src/: offboard_control.py
ros2_ws/src/autonofly_nav/: setup.cfg  setup.py
ros2_ws/src/autonofly_nav/autonofly_nav/: rrt_node.py  rrt_planner.py
ros2_ws/src/autonofly_nav/launch/: autonofly_simulation.launch.py
ros2_ws/src/autonofly_slam/: setup.cfg  setup.py
ros2_ws/src/autonofly_slam/autonofly_slam/: fastslam_node.py  slam_subscriber.py
ros2_ws/src/autonofly_slam/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/src/autonofly_slam/log/: latest_build
(+5792 files in other folders)
