<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autonofly_nav</name>
  <version>0.0.1</version>
  <description>Autonomous Navigation: RRT</description>
  <maintainer email="nadaajerdi2022@gmail.com">Nada</maintainer>
  <license>Apache-2.0</license>

  <!-- Build system -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <!-- Export for Python packages -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
